feat: update colour variable names to align with new colour suite and iterated through components to reflect. Itsadssd 53487 color (#445)
* initial variables setup

* base color variable clean up and accordion component update

* missing purple variable

* alert variables update

* breadcrumb component update

* update body text color to grey-900

* card componenent color updates

* remove unused variables from footer global

* update grid menu color variables

* header variables clean up

* hero colors update

* lists update

* page header updates

* paginsation color updates

* pane color updates

* prevnext componenet update

* progression comp update

* section uppdate

* side nav update

* site header update and clean up

* table updates

* linting

* begin updating colour doco

* purple-600 hex updated

* color docs WIP

* WIP color doco

* updating doco to new format

* doco updated inline with CX feedback

* more doco updates

* overhaul of colour variable names to remove uq- prefix. added shorthand colour variables. iterated through components and doco to update references and replace where neccessary

* linting

* removing neutral variables and references

* remove netutrals variables and generated variables. iterated through components

* linting

* replace variables missed in previous commit

* remove tint/shade functions

* colour doco fixes

* remove unecessary text utility color classses and updated doco

* refactor: reorder and cleanup of constants file

* refactor: update gradient to use purple-500 rather than shorthand

* fix: merge conflicts

* choree: lint

* fix: remove all  nad replace with purple-500

* fix: remove red - replace with error-500

* fix: remove yellow  shorthand and reaplce with warning-500

* fix: replace  shorthand with utility-500 and remove from contsants

* fix: remove green colour shorthand and replaced with success-500

* chore: l

--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -20,8 +20,8 @@
 
   // Accordion item.
   &__item {
-    background: $accordion-content-bg;
-    border: 1px solid $accordion-border-color;
+    background: core.$white;
+    border: 1px solid core.$grey-200;
     border-radius: 2px;
     margin-bottom: core.$space-s;
 
@@ -34,7 +34,7 @@
   &__toggle {
     -moz-appearance: none;
     -webkit-appearance: none;
-    background: $accordion-content-bg;
+    background: core.$white;
     border-radius: 0;
     border-style: solid;
     border-width: 0;
@@ -69,7 +69,7 @@
       content: "";
       background-image: url(icon-constants.get-icon(
         "standard--chevron-down",
-        core.$uq-purple
+        core.$purple-500
       ));
       background-repeat: no-repeat;
       width: core.$space-l;
@@ -85,7 +85,7 @@
     &:hover,
     &:focus {
       color: core.$text;
-      background-color: $accordion-title-bg-hover;
+      background-color: core.$grey-50;
     }
 
     &:focus {
@@ -94,19 +94,19 @@
 
     // Active toggle.
     &--active {
-      background: $accordion-content-bg;
+      background: core.$white;
 
       // Open state.
       &::before {
         background-image: url(icon-constants.get-icon(
           "standard--chevron-down",
-          core.$uq-purple
+          core.$purple-500
         ));
       }
 
       &:hover,
       &:focus {
-        background-color: $accordion-content-bg;
+        background-color: core.$white;
       }
     }
   }
@@ -189,7 +189,7 @@
 // Overrides for when displayed within wysiwyg fields. (Drupal?)
 .cke_editable {
   .uq-accordion__content {
-    border: 1px dashed $accordion-editor-outline;
+    border: 1px dashed core.$utility-500;
     display: block !important;
   }
 }
