--- a/packages/storybook-html/stories/components/grid/grid.scss
+++ b/packages/storybook-html/stories/components/grid/grid.scss
@@ -4,10 +4,10 @@
 .uqds-example-grid {
   background: repeating-linear-gradient(
     45deg,
-    core.$uq-neutral-light60,
-    core.$uq-neutral-light60 10px,
-    core.$uq-neutral-light80 10px,
-    core.$uq-neutral-light80 20px
+    core.$grey-100,
+    core.$grey-100 10px,
+    core.$grey-50 10px,
+    core.$grey-50 20px
   );
   padding: core.$space-l 0;
   overflow: visible;
@@ -36,8 +36,8 @@
   .uq-grid {
     &__col {
       > span {
-        background-color: lighten(core.$uq-aqua, 45%);
-        border: 1px solid core.$uq-aqua;
+        background-color: lighten(core.$utility-500, 45%);
+        border: 1px solid core.$utility-500;
         display: block;
         height: 100%;
         font-size: core.$font-size-xs;
@@ -50,28 +50,28 @@
         }
 
         @media #{core.$screen-xs-up} {
-          background-color: lighten(core.$uq-yellow, 35%);
-          border-color: core.$uq-yellow;
+          background-color: lighten(core.$warning-500, 35%);
+          border-color: core.$warning-500;
         }
 
         @media #{core.$screen-sm-up} {
-          background-color: lighten(core.$uq-orange, 35%);
-          border-color: core.$uq-orange;
+          background-color: core.$error-500;
+          border-color: core.$error-500;
         }
 
         @media #{core.$screen-md-up} {
-          background-color: lighten(core.$uq-purple, 45%);
-          border-color: core.$uq-purple;
+          background-color: lighten(core.$purple-500, 45%);
+          border-color: core.$purple-500;
         }
 
         @media #{core.$screen-lg-up} {
-          background-color: lighten(core.$uq-green, 45%);
-          border-color: core.$uq-green;
+          background-color: lighten(core.$success-500, 45%);
+          border-color: core.$success-500;
         }
 
         @media #{core.$screen-xl-up} {
-          background-color: lighten(core.$uq-blue, 40%);
-          border-color: core.$uq-blue;
+          background-color: lighten(core.$utility-500, 40%);
+          border-color: core.$utility-500;
         }
       }
     }
