--- a/packages/tabs/src/scss/_component.scss
+++ b/packages/tabs/src/scss/_component.scss
@@ -45,8 +45,8 @@
     margin-right: core.$space-xs;
     font-size: core.$font-size-m;
     font-weight: core.$font-weight-thin;
-    color: core.$uq-neutral-dark80;
-    background-color: core.$uq-white;
+    color: core.$text;
+    background-color: core.$white;
     border-radius: core.$space-xs core.$space-xs core.$space-none
       core.$space-none;
     border: none;
@@ -65,8 +65,8 @@
     }
 
     &--active {
-      color: core.$uq-purple;
-      background-color: core.$uq-white;
+      color: core.$purple-500;
+      background-color: core.$white;
       font-weight: core.$font-weight-bold;
 
       &::before {
@@ -75,7 +75,7 @@
         left: 0;
         width: 100%;
         height: 2px;
-        background-color: core.$uq-white;
+        background-color: core.$white;
         content: "";
         display: none;
       }
@@ -97,8 +97,8 @@
   &__tab-panel {
     padding: core.$space-m core.$space-l;
     font-size: core.$font-size-m;
-    color: core.$uq-neutral-dark80;
-    background-color: core.$uq-white;
+    color: core.$text;
+    background-color: core.$white;
 
     @media #{core.$screen-md-up} {
       padding: core.$space-l core.$space-xl;
@@ -108,27 +108,27 @@
   // Default / Outline variant
   &.uq-tabs--outline {
     .uq-tabs__tab-list {
-      border-bottom: 1px solid $tab-border-color;
+      border-bottom: 1px solid core.$grey-200;
     }
 
     .uq-tabs__tab {
-      background-color: core.$uq-white;
-      border: 1px solid $tab-border-color;
+      background-color: core.$white;
+      border: 1px solid core.$grey-200;
       margin-bottom: -1px;
 
       &:hover,
       &:focus,
       &:active {
-        background-color: core.$uq-white;
+        background-color: core.$white;
       }
 
       &--active {
-        background-color: core.$uq-white;
+        background-color: core.$white;
 
         &:hover,
         &:focus,
         &:active {
-          background-color: core.$uq-white;
+          background-color: core.$white;
         }
 
         &::before {
@@ -141,21 +141,21 @@
   // Lined variant
   &.uq-tabs--lined {
     .uq-tabs__tab-list {
-      border-bottom: 1px solid $tab-border-color;
+      border-bottom: 1px solid core.$grey-200;
     }
 
     .uq-tabs__tab {
       &--active {
-        background-color: core.$uq-white;
+        background-color: core.$white;
 
         &:hover,
         &:focus,
         &:active {
-          background-color: core.$uq-white;
+          background-color: core.$white;
         }
 
         &::before {
-          background-color: core.$uq-purple;
+          background-color: core.$purple-500;
           display: block;
         }
       }
