--- a/packages/card/src/scss/_global.scss
+++ b/packages/card/src/scss/_global.scss
@@ -1,7 +1,5 @@
 @use "@uqds/core/src/scss/global" as core;
 
-$card-shaded-bg: core.$uq-neutral-light80;
-
 // Truncate card body text
 @mixin truncate-card-1col-body-text {
   white-space: normal;
@@ -31,14 +29,12 @@ $card-shaded-bg: core.$uq-neutral-light80;
       flex-direction: row;
       padding-bottom: 1rem;
       border: none;
-      border-bottom: 1px solid core.$uq-neutral-light60;
-      box-shadow: 0 core.$space-xs core.$space-xs
-        rgba(core.$uq-neutral-dark80, 0);
+      border-bottom: 1px solid core.$grey-200;
+      box-shadow: 0 core.$space-xs core.$space-xs rgba(core.$grey-900, 0);
 
       &:hover,
       &:focus {
-        box-shadow: 0 core.$space-s core.$space-s
-          rgba(core.$uq-neutral-dark80, 0.1);
+        box-shadow: 0 core.$space-s core.$space-s rgba(core.$grey-900, 0.1);
       }
 
       .uq-card__image__wrapper {
