--- a/packages/progression/src/scss/_component.scss
+++ b/packages/progression/src/scss/_component.scss
@@ -25,7 +25,7 @@
 
     .uq-progression__link {
       &:hover {
-        background-color: core.$uq-neutral-dark40;
+        background-color: core.$grey-500;
         text-decoration: none;
       }
     }
@@ -49,15 +49,15 @@
     }
     &:hover {
       .uq-progression__step-number {
-        background-color: core.$uq-neutral-dark40;
+        background-color: core.$grey-500;
         text-decoration: none;
       }
     }
   }
   &__step-number {
-    background-color: core.$uq-neutral-dark20;
+    background-color: core.$grey-600;
     border-radius: 50%;
-    color: core.$uq-white;
+    color: core.$white;
     display: block;
     height: 1.875rem;
     line-height: 1.875rem;
@@ -73,7 +73,7 @@
   &__step-label {
     display: none;
     @media (min-width: 640px) {
-      color: core.$uq-neutral-dark80;
+      color: core.$text;
       display: block;
       line-height: 1.2;
       position: absolute;
@@ -87,9 +87,9 @@
   }
 
   &__bar {
-    background-color: core.$uq-neutral;
-    border-right: 1px solid core.$uq-white;
-    border-left: 1px solid core.$uq-white;
+    background-color: core.$grey-500;
+    border-right: 1px solid core.$white;
+    border-left: 1px solid core.$white;
     display: flex;
     flex: 1;
     height: 10px;
@@ -102,7 +102,7 @@
     }
 
     & .uq-progression__bar {
-      background-color: core.$uq-neutral-light20;
+      background-color: core.$grey-500;
       margin: 0;
     }
   }
@@ -123,24 +123,24 @@
   .uq-progression__step-number,
   .uq-progression__link .uq-progression__step-number,
   .uq-progression__bar {
-    background-color: core.$uq-green;
-    color: core.$uq-white;
+    background-color: core.$success-500;
+    color: core.$white;
   }
 
   .uq-progression__step .uq-progression__link:hover,
   .uq-progression__link:hover .uq-progression__step-number {
-    background-color: darken(core.$uq-green, 10%);
+    background-color: core.$success-700;
     text-decoration: none;
   }
 }
 
 .uq-progression__bar {
   .uq-progression__bar {
-    background-color: core.$uq-neutral-light20;
-    color: core.$uq-white;
+    background-color: core.$grey-300;
+    color: core.$white;
   }
   .is-complete {
-    background-color: core.$uq-green !important;
-    color: core.$uq-white;
+    background-color: core.$success-500 !important;
+    color: core.$white;
   }
 }
