--- a/packages/storybook-html/stories/docs/layout/layout.scss
+++ b/packages/storybook-html/stories/docs/layout/layout.scss
@@ -3,10 +3,10 @@
 .uqds-base-layout-grid {
   background: repeating-linear-gradient(
     45deg,
-    core.$uq-neutral-light60,
-    core.$uq-neutral-light60 10px,
-    core.$uq-neutral-light80 10px,
-    core.$uq-neutral-light80 20px
+    core.$grey-100,
+    core.$grey-100 10px,
+    core.$grey-50 10px,
+    core.$grey-50 20px
   );
 
   .uq-grid {
@@ -15,10 +15,10 @@
     &::before {
       background: repeating-linear-gradient(
         45deg,
-        lighten(core.$uq-red, 30%),
-        lighten(core.$uq-red, 30%) 10px,
-        lighten(core.$uq-red, 35%) 10px,
-        lighten(core.$uq-red, 35%) 20px
+        lighten(core.$error-500, 30%),
+        lighten(core.$error-500, 30%) 10px,
+        lighten(core.$error-500, 35%) 10px,
+        lighten(core.$error-500, 35%) 20px
       );
       content: "";
       position: absolute;
@@ -38,8 +38,8 @@
       }
 
       > span {
-        background-color: lighten(core.$uq-aqua, 45%);
-        border: 1px solid core.$uq-aqua;
+        background-color: lighten(core.$utility-500, 45%);
+        border: 1px solid core.$utility-500;
         display: flex;
         flex-direction: column;
         height: 100%;
@@ -53,15 +53,15 @@
 
       @media #{core.$screen-xs-up} {
         > span {
-          background-color: lighten(core.$uq-yellow, 35%);
-          border-color: core.$uq-yellow;
+          background-color: lighten(core.$warning-500, 35%);
+          border-color: core.$warning-500;
         }
       }
 
       @media #{core.$screen-sm-up} {
         > span {
-          background-color: lighten(core.$uq-orange, 35%);
-          border-color: core.$uq-orange;
+          background-color: lighten(core.$error-500, 35%);
+          border-color: core.$error-500;
         }
       }
 
@@ -75,15 +75,15 @@
         }
 
         > span {
-          background-color: lighten(core.$uq-purple, 50%);
-          border-color: core.$uq-purple;
+          background-color: lighten(core.$purple-500, 50%);
+          border-color: core.$purple-500;
         }
       }
 
       @media #{core.$screen-lg-up} {
         > span {
-          background-color: lighten(core.$uq-green, 45%);
-          border-color: core.$uq-green;
+          background-color: lighten(core.$success-500, 45%);
+          border-color: core.$success-500;
         }
       }
 
@@ -93,8 +93,8 @@
         }
 
         > span {
-          background-color: lighten(core.$uq-blue, 40%);
-          border-color: core.$uq-blue;
+          background-color: lighten(core.$utility-500, 40%);
+          border-color: core.$utility-500;
         }
       }
     }
